# azureenergylabelerlib

./: .cruft.json  .gitignore  .prospector.yaml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  INSTALLATION.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  USAGE.rst  dev-requirements.txt  mkdocs.yml  pylintrc  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  setup.py  tox.ini
.github/actions/setup-env/: action.yaml
.github/workflows/: main.yml  release.yaml
_CI/files/: environment_variables.json
azureenergylabelerlib/: __init__.py  _version.py  azureenergylabelerlib.py  azureenergylabelerlibexceptions.py  configuration.py  datamodels.py  entities.py  labels.py  schemas.py  validations.py
docs/: Makefile  api.md  conf.py  contributing.md  index.md  index.rst  installation.md  usage.md
src/azureenergylabelerlib/: __init__.py  azureenergylabelerlib.py  azureenergylabelerlibexceptions.py  configuration.py  datamodels.py  entities.py  labels.py  schemas.py  validations.py
tests/: __init__.py  test_azureenergylabelerlib.py
